ejemplo2b/app1-python-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-mongo-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: python-mongo
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: python-mongo
    spec:
      containers:
      - name: python-mongo
        image: codeurjc/python-mongo
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-mongo-service
  labels:
    app: python-mongo
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: python-mongo-port
  selector:
    app: python-mongo
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: python-mongo-ingress
    labels:
      app: python-mongo
spec:
  rules:
  - host: python-mongo.k8s.codeurjc.es
    http:
      paths:
      - backend:
          serviceName: python-mongo-service
          servicePort: 5000
